# Polygeist

./: CMakeLists.txt  README.md  build-tools.sh  build.sh  mlir-gen.sh
include/HLI/: CMakeLists.txt  HLI.td  HLIDialect.h  HLIDialect.td  HLIOps.h  HLIOps.td  HLITypes.h  HLITypes.td
include/HLI/Interfaces/: CMakeLists.txt  TypeInferInterface.h  TypeInferInterface.td
include/HLI/Passes/: CMakeLists.txt  Passes.h  Passes.td
include/polygeist/: CMakeLists.txt
lib/: CMakeLists.txt
lib/HLI/: CMakeLists.txt  HLIDialect.cpp  HLIOps.cpp  HLITypes.cpp
lib/HLI/Interfaces/: CMakeLists.txt  TypeInferInterface.cpp
lib/HLI/Transforms/: CMakeLists.txt  ConvertAffineToHLI.cpp  ConvertArithToHLI.cpp  DCE.cpp
test/c2mlir/: input.c
test/mlir-toy/: hli.ops.mlir
tools/: CMakeLists.txt
tools/mlir-toy/: CMakeLists.txt  mlir-printer.cpp  toy-main.cpp  toy-opt.cpp
